# PyMO2NScr

./: .gitignore  .gitmodules  CLAUDE.md  PyMO2NScr.cabal  README.md  stack.yaml
src/: CommandCompiler.hs  Commands.hs  Compiler.hs  CompilerMonad.hs  DefinesGenerator.hs  IDAllocator.hs  Main.hs  NSACreator.hs  NScrGen.hs  ScriptCompiler.hs  ToBuilder.hs  nscr-template.txt
