cabal-version:       2.2

name:                PyMO2NScr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/PyMO-Ecosphere/PyMO2NScr
license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              Seng-Jik
maintainer:          xc1998@foxmail.com
copyright:           PyMO Ecosphere
category:            game
build-type:          Simple
extra-source-files:  README.md

executable PyMO2NScr
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Compiler
                     , CommandCompiler
                     , ScriptCompiler
                     , DefinesGenerator
                     , NSACreator

  build-depends:       base >= 4.7 && < 5
                     , with-utf8
                     , text
                     , encoding
                     , bytestring
                     , filepath
                     , mtl
                     , text-builder
                     , file-embed
                     , hashable
                     , unordered-containers
                     , resourcet
                     , PyMO-Parser
                     , JuicyPixels

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

